# Projet2048

./: #test_bug.c#  2048  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  README.txt  amorceSsup.c  cmake_install.cmake  control  control-grid-SDL.c  control-grid.c  control-grid.c~  fonctions-sup.c  fonctions-sup.h  fonctions-sup.h~  graphical-grid.c  graphical-grid.c~  graphical-grid.h  grid.c  grid.c~  hidee-alt.c  hidee-alt.c~  main.c  readmeBis.txt  showee-alt.c  strategie_sup.c  strategie_sup.h  strategy.c  strategy.h  strategy2.c  strategy2.h  stratsup  test  test-grid.c  test2  testSsup  testStratBat.c
test/: test.c  test2.c
